--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
         "redis": "4.6.8",
         "express": "4.18.2",
         "pg": "8.11.3",
-        "cors": "2.8.5"
+        "cors": "2.8.5",
+        "body-parser": "*"
     },
     "scripts": {
         "start": "node index.js",
